Update resource loading